samples/_failures_safe/1761244641_1bb18b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1031cba8.c: In function ‘main’:
./samples/SAFE/__tmp_1031cba8.c:151:5: error: expected declaration or statement at end of input
  151 |     int found = 0;
      |     ^~~
